Реализован функционал по ТЗ 8 спринта